# qmvideo

./: .gitignore  .gitmodules  CMakeLists.txt  back.cpp  main.cpp  qmvideodecoder.cpp  qmvideodecoder.h  qmvideoplayer.cpp  qmvideoplayer.h  qmyuvview.h
source/: CMakeLists.txt  qmvideo_global.h  qmvideodecoder.cpp  qmvideodecoder.h  qmyuvview.cpp  qmyuvview.h
tests/: CMakeLists.txt
